--- a/public/global.css
+++ b/public/global.css
@@ -1,10 +1,12 @@
 html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+	/* position: relative;
+	width: 100%;*/
+	
+	/* height: 100vh; */
 }
 
 body {
+	height: calc(100vh);
 	color: #333;
 	margin: 0;
 	padding: 8px;
